# AiFGym

./: .gitignore  README.md  README.org  agent.py  aif_agent.py  aifgym-refs.bib  aiz.yml  installation.txt  main.py  pyproject.toml  requirements.txt  rl_glue.py  visualiz.py
active_inf/agents/: aif_agent.py  utils_actinf.py
active_inf/envs/: grid_env.py  maze_env.py  omaze_env.py
active_inf/envs/grid_envs/: grid_world_v0.py
active_inf/phts/: GridWorldv0_phts.py
active_inf/tasks/: task1.py  utils.py
active_inf/visuals/: utils_vis.py  visualiz.py
aifgym/: __init__.py
aifgym/agents/: aif_agent.py  base_agents.py  utils_actinf.py
aifgym/envs/: environment.py
aifgym/envs/grid_envs/: __init__.py  grid_world_v0.py
aifgym/phts/: GridWorldv0_phts.py
aifgym/scripts/: main.py
aifgym/tasks/: task1.py  utils.py
aifgym/visuals/: __init__.py  utils_vis.py
docs/: aif-gym-docs.md  aif-gym-docs.org  aif-gym-nb.org
envs/: __init__.py  bforest_env.py
envs/grid_envs/: grid_world_v0.py
phts/: omaze_phts.py  simple_grid_phts.py
scripts/: main.py
utils/: utils_phts.py  utils_run.py  utils_vis.py
